octsympy 2.4.0-dev
==================

  * New commands:

          laguerreL

  * Move some functions from the specfun package.  So now the Symbolic
    package hosts some numerical implementations as well:

          laguerreL
          lambertw

  * Re-implement @double/laguerreL for numerical stability.



octsympy 2.3.0-dev
==================

  * New commands:

          airy
          besselj
          bessely
          besseli
          besselk
          besselh
          cbrt
          chebyshevU
          chebyshevT
          fix
          frac
          intersect
          interval
          ismember
          finiteset
          has
          kron
          linspace
          logspace
          max
          min
          rewrite
          round
          sort
          union
          unique

  * Bug fix for working with certain unevaluated integrals.

  * Bug fixes for function_handle, fortran and ccode.

  * Bug fixes or improvements to repmat, reshape, python_cmd, factor,
    dot star, children.

  * Support for SymPy 1.0.

  * Errors raised in Python code are now caught and passed back to Octave
    in most cases.  This simplifies implementation.
      - Note some error messages have changed slightly.
      - Windows users now see previously hidden error messages.
    Thanks to @latot.

  * New functions for converting sym to integers.  Thanks to @latot.

  * Making a sym of a large integer like `sym(10^16)` gives a warning.
    Please use `sym(10)^16` or `sym('1000000000000123456789').

  * New functions for dealing with sets and intervals and operations
    on them, thanks to @latot.

  * 2D Taylor expansions are implemented, thanks to Utkarsh Gautam.

  * Sort is implemented, thanks to Utkarsh Gautam.

  * Fourier and Laplace transforms (and their inverses) use a
    different implementation which improves handling of delta
    functions.  Ideally, a later version will consolidate this with
    SymPy's original implementations.
