@@ -13,6 +13,7 @@ Abhinav Tripathi
 Utkarsh Gautam
 Eric Chassande-Mottin
 Nicol N. Schraudolph
+Sylvain Pelissier
 
 (Please contact the developers if your name should be here but isn't!)
 
