@@ -8,6 +8,8 @@ octsympy 2.4.0-dev
   * Move some functions from the specfun package.  So now the Symbolic
     package hosts some numerical implementations as well:
 
+          dirac
+          heaviside
           laguerreL
           lambertw
 
